# warcut

./: .gitignore  AGENTS.md  PROJECT.md  README.md  mind-map.md  program.md  pyproject.toml
assets_curated/: index.html  library.json
assets_curated/items/: commons-file-campo-de-concentraci-n-de-albatera-mural-explicativo-jpg.json  commons-file-elorza-rodezno-oreja-bilbao-1933-jpg.json  commons-file-feu-tancs-jpg.json  commons-file-india-roadway-map-svg.json  commons-file-jbs-haldane-pictured-in-front-of-a-poster-of-the-spanish-republican-5th-regiment-png.json  commons-file-life-expectancy-map-of-italy-2021-regions-names-png.json  commons-file-llegiu-catalunya-jpg.json  commons-file-lord-of-the-horses-old-iberian-god-villaricos-almeria-museu-d-arqueologia-de-catalunya-barcelona-2014-jpg.json  commons-file-millicians-a-barcelona-ell-1936-jpg.json  commons-file-spain-electoral-districts-1933-1936-jpg.json  commons-file-spain-regions-map-cs-png.json  commons-file-spanish-general-elections-of-1931-1933-and-1936-jpg.json  internet_archive-1936-09-09-terrified-civilians-flee-air-raid.json  local-map-base-svg.json  (+1 more)
episodes/: autoresearch_planner.yaml  ep01.notes.md  ep01.script.md  ep01.yaml  ep01_smoke.yaml  library_newsreels.yaml
research/: README.md  spanish-civil-war-footprint-audit.md  spanish-civil-war-hub.md
templates/: lower_thirds.json  map_frame.json  quote_card.json
tests/: test_build.py  test_commons.py  test_internet_archive.py  test_library.py  test_local_sources.py  test_planner_benchmark.py  test_schema.py  test_tts_openai.py  test_voice_cues.py
(+33 files in other folders)
